--- a/style.css
+++ b/style.css
@@ -1,17 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,900;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;900&display=swap');
+
+
+/* CSS HEX
+--violet-blue-crayola: #7e78d2ff;
+--slate-blue: #6f58c9ff;
+--powder-blue: #bfedefff;
+--turquoise: #76e7cdff; */
+
+* {
+    /* outline: solid red 8px; */
+}
+    
 
 body {
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Cairo', 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
+    gap: 0;
+    flex-wrap: wrap;
 }
 
 button {
     width: 120px;
     height: 30px;
-    background-color: #3882F6;
+    background-color: #6f58c9ff;
     color: #F9FAF8;
+    font-family: 'Cairo', 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 800;
     border-radius: 8px;
@@ -42,38 +58,48 @@ a {
 /* HERO SECTION */
 
 .logo {
-    font: 24px;
-    color: #F9FAF8;
-    flex: 1;
+    max-width: 280px;
+    height: 98px;
 }
 
 .top {
-    padding: 0 250px 150px;
-    background-color: #1F2937;
+    padding: 0 200px 150px;
+    background-color: #000000;
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    gap: 30px;
 }
 
 .top-bar {
     display: flex;
     justify-content: space-between;
-    margin-top: 8px;
+    align-items: center;
+    margin-top: 72px;
+    
 }
 
 .links {
     display: flex;
-    gap: 16px;
-    font: 18px;
+    gap: 50px;
+    align-self: flex-start;   
+}
+
+.header-link {
     color: #E5E7EB;
-    
+    font-size: 24px; 
+}
+
+.header-link:hover {
+    cursor: pointer;
+    background-color: #161d27;
+    border-radius: 60%;
 }
 
 .hero-and-image-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 100px;
+    gap: 40px;
 
 
 }
@@ -89,11 +115,55 @@ a {
     flex-direction: column;
 }
 
-.hero-subtext {
-    width: 450px;
-    font: 18px;
+.hero-subtext-1,
+.hero-subtext-2 {
+    max-width: 580px;
+    font-size: 24px;
     color: #E5E7EB;
 }
+
+.hero-subtext-1 {
+    /* text-align: end; */
+    margin-bottom: 0px;
+    /* margin-left: 32px; */
+  }
+
+.hero-subtext-2 {
+  /* text-align: end; */
+  margin-top: 0;
+  /* margin-left: 32px; */
+}
+
+.hero-video {
+    max-width: 1000px;
+    height: 600px;
+    border-radius: 50%;
+    border-bottom: solid #76e7cdff;
+    border-bottom-width: 20px;
+}
+
+.hero-button-container {
+    display: flex;
+    justify-content: flex-end;
+    
+}
+
+.hero-button {
+    width: 320px;
+    height: 150px;
+    font-size: 35px;
+    border-radius: 50%;
+    background-color: #7e78d2ff;
+    margin-bottom: 3%;
+}
+
+.hero-button:hover {
+    cursor: pointer;
+    background-color: #76e7cdff;
+    color: black;
+    border-bottom: 4px solid aliceblue;
+}
+
 
 
 /* INFO SECTION */
@@ -103,11 +173,32 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
-.hero-image {
-    width: 600px;
-    height: 300px;
+.founder-with-information-container {
+   display: flex;
+}
+
+.founder-image {
+    max-width: 800px;
+    height: 800px;
+}
+
+.signature {
+    max-width: 600px;
+    height: 200px;
+}
+
+
+.info-container {
+    padding: 0 0 50px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    align-self: flex-end;
+    flex: 1;
 }
 
 .mid-title {
@@ -117,37 +208,29 @@ a {
     color: #1F2937;
 }
 
-.info-container {
-    padding: 0 0 100px 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    flex: 1;
-}
-
 .ill-with-text {
     display: flex;
     gap: 48px;
 }
 
 .ill-and-subtext {
-    display: column;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 16px;
 }
 
 .illustration {
-    width: 150px;
+    max-width: 150px;
     height: 150px;
-    border: 4px solid #3882F6;
+    /* border: 4px solid #3882F6; */
     border-radius: 10%;
 }
 
 .ill-subtext {
     font-size: 18px;
-    width: 150px;
+    max-width: 180px;
     font-weight: 400;
     text-align: center;
     margin: 0;
@@ -156,32 +239,43 @@ a {
 
 /* QUOTE SECTION */
 
+.quote-and-clouds {
+    display: flex;
+    background-color: #5f45c4;
+    width: 100%;
+}
+
 .quote-main {
-    background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
-    flex: 1;
     padding: 150px;
-    width: 100%;
     justify-content: center;    
-    align-items: center;
+    align-items: flex-start;
+    width: 100%;
 }
 
 .quote-container {
     display: flex;
     flex-direction: column;
+    gap: 80px;
+    padding-left: 50px;   
+}
+
+.clouds {
+    max-width: 1200px;
+    height: 1000px;
 }
 
 .quote {
     font-style: italic;
+    font-weight: 300;
     font-size: 38px;
     color: #1F2937;
-    width: 700px;
-    margin: 0;
+    max-width: 800px;
+    margin: 0; 
 }
 
 .quote-author {
-    align-self: flex-end;
     margin: 0;
     font-size: 30px;
 }
@@ -189,17 +283,26 @@ a {
 
 /* SIGNUP CALL SECTION */
 
+.cta-meta-container {
+    background-color: black;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    width: 100%;
+}
+
 .call-to-action-container {
-    background-color: #3882F6;
+    background-color: #6f58c9ff;
     color: #F9FAF8;
     padding: 40px;
-    border-radius: 10px;
+    border-radius: 50px;
     display: flex;
     margin: 30px;
     justify-content: space-between;
     align-items: center;
     gap: 150px;
-    
+    font-size: 20px;
 }
 
 .non-button-text-container {
@@ -215,13 +318,19 @@ a {
 }
 
 .final-button {
-    border: 2px solid #F9FAF8;
+    border: 2px solid aliceblue;
+    border-radius: 50%;
+    background-color: #7e78d2ff;
+    width: 200px;
+    height: 100px;
+    font-size: 24px;
+    
 }
 
 /* FOOTER */
 
 footer {
-    background-color: #1F2937;
+    background-color: #5f45c4;
     color: #F9FAF8;
     display: flex;
     justify-content: center;
